--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,16 +16,25 @@ spring:
   profiles: local
 
 ---
-# Dev
+# mysql
 
 spring:
-  profiles: dev
+  profiles: mysql
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: localhost:3306/parkinglot
-    username: root
-    password: admin1!
+    hikari:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: localhost:3306/parkinglot
+      username: root
+      password: admin1!
 
 ---
 # H2
 
+spring:
+  profiles: h2
+  datasource:
+    hikari:
+      url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+      username: sa
+      password:
+      driver-class-name: com.h2.Driver
