--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,10 +22,10 @@ spring:
   profiles: mysql
   datasource:
     hikari:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: localhost:3306/parkinglot
+      driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: admin1!
+      jdbc-url: jdbc:mysql://localhost:3306/parkinglot
 
 ---
 # H2
@@ -34,7 +34,7 @@ spring:
   profiles: h2
   datasource:
     hikari:
-      url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
       username: sa
       password:
       driver-class-name: com.h2.Driver
