--- a/build.gradle
+++ b/build.gradle
@@ -52,3 +52,11 @@ asciidoctor {
     inputs.dir snippetsDir
     dependsOn test
 }
+
+bootJar { // SpringBoot 1.5 이하일 경우 jar
+    dependsOn asciidoctor
+    from ("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
+}
+
