chore: 기본 프로파일 local 로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,16 @@
 
 spring:
   profiles:
-    active: dev
+    active: local
+
+server:
+  servlet:
+    context-path: /api
+
 common:
   open-api:
     endpoint: http://openapi.seoul.go.kr:8088
     token: 6a756259796a756d32304559665677
-
 ---
 # Local
 
