--- a/parkinglot-api/build.gradle
+++ b/parkinglot-api/build.gradle
@@ -2,7 +2,7 @@ plugins {
 //    id 'org.springframework.boot' version '2.2.2.RELEASE'
 //    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.asciidoctor.convert' version '1.5.8'
-//    id 'java'
+    id 'java'
 }
 
 //group = 'me.shawn.challenge'
@@ -44,6 +44,10 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+}
+
+springBoot {
+    mainClassName = 'me.shawn.challenge.parkinglotapi.ParkinglotApiApplication'
 }
 
 test {
