--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         springBootVersion = '2.2.2.RELEASE'
+        springCloudVersion = 'Hoxton.SR1'
     }
     repositories {
         mavenCentral()
@@ -14,14 +15,9 @@ buildscript {
 // gradle spring project configuration
 // https://github.com/gradle/gradle/blob/master/subprojects/docs/src/samples/spring-boot-web-application/groovy/build.gradle
 
-/*
-plugins {
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
-    id "java"
-}
- */
-
 allprojects {
+    apply plugin: 'java'
+
     task hello {
         doLast {
             println 'Hello world!'
@@ -30,16 +26,36 @@ allprojects {
 }
 
 subprojects {
+    buildscript {
+        ext {
+            springBootVersion = '2.2.2.RELEASE'
+            springCloudVersion = 'Hoxton.SR1'
+        }
+        repositories {
+            mavenCentral()
+        }
+        dependencies {
+            classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+            classpath "io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE"
+        }
+    }
+
     group = 'me.shawn.challenge'
     version = '0.0.1-SNAPSHOT'
 
-    apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
-    apply plugin:  "org.springframework.boot"
+    apply plugin: 'org.springframework.boot'
 
     java {
         sourceCompatibility = JavaVersion.VERSION_1_8
     }
+
+    jar {
+
+        baseName = 'gs-spring-boot-docker'
+        version =  '0.1.0'
+    }
+
 
     repositories {
         mavenCentral()
@@ -51,6 +67,14 @@ subprojects {
     dependencyManagement {
         imports {
             mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+        }
+    }
+}
+
+project(':proxy') {
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
     }
 }
