--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
-language: java
-install: true
-
 os: linux
 dist: trusty
-jdk: oraclejdk8
 
-script:
-  - ./gradlew clean
-  - ./gradlew build
+matrix:
+  include:
+    - language: node_js
+      node_js:
+        - "node --version"
+    - language: java
+      jdk: oraclejdk8
+      script:
+        - ./gradlew build
