--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
+language: java
+install: true
+
 os: linux
 dist: trusty
+jdk: oraclejdk8
 
-matrix:
-  include:
-    - language: java
-      jdk: oraclejdk8
-      before_script:
-        - yarn --version && yarn global add @vue/cli
-      script:
-        - ./gradlew build
+before_install:
+  - echo "before install!"
+  - npm --version
+  - yarn --version || npm install -g yarn
+  - yarn global add @vue/cli
+
+script:
+  - ./gradlew clean
+  - ./gradlew build
