--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ jdk: oraclejdk8
 
 before_install:
   - echo "before install!"
+  - nvm --version
+  - nvm install --lts && nvm use --lts
+  - node --version
   - npm --version
   - yarn --version || npm install -g yarn
   - yarn global add @vue/cli
