chore: travis ci nodejs 빌드설정 추가

--- a/parkinglot-front/build.gradle
+++ b/parkinglot-front/build.gradle
@@ -15,7 +15,10 @@ dependencies {
     }
 }
 
-task webpack(type: NpmTask, dependsOn: 'yarnSetup') {
+task vuecliSetup(type: YarnTask, dependsOn: 'yarn') {
+    args ['global', 'add', '@vue/cli']
+}
+task webpack(type: YarnTask, dependsOn: 'yarnSetup') {
     args = ['run', 'build']
 }
 
