chore: travis ci nodejs 빌드설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/parkinglot-front/src/main/resources/static/
 
 # Created by https://www.gitignore.io/api/java,macos,maven,gradle,windows,eclipse,intellij+all
 # Edit at https://www.gitignore.io/?templates=java,macos,maven,gradle,windows,eclipse,intellij+all
