chore: travis ci nodejs 빌드설정 추가

--- a/parkinglot-front/build.gradle
+++ b/parkinglot-front/build.gradle
@@ -26,4 +26,4 @@ bootJar {
     mainClassName = 'me.shawn.challenge.parkinglotfront.FrontApplication'
 }
 
-processResources.dependsOn 'webpack'
+processResources.dependsOn 'vuecliSetup', 'webpack'
