--- a/parkinglot-front/package.json
+++ b/parkinglot-front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "node-fetch": "^2.6.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
