--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ subprojects {
     }
 
     dependencies {
+        compile 'org.springframework.boot:spring-boot-devtools'
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
