--- a/parkinglot-front/package.json
+++ b/parkinglot-front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "core-js": "^3.4.4",
     "node-fetch": "^2.6.0",
     "vue": "^2.6.10"
@@ -19,6 +20,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "vue-cli-plugin-source-dir": "^0.1.0",
     "vue-template-compiler": "^2.6.10"
   },
