--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,26 @@ version: '3'
 services:
   front:
     build: ./parkinglot-front
-    ports:
-      - 8001:8001
+    networks:
+      - frontend
+#    ports:
+#      - 8001:8001
   api:
     build: ./parkinglot-api
-    ports:
-      - 8080:8080
+    networks:
+      - backend
+#    ports:
+#      - 8080:8080
   proxy:
+    build: ./proxy
     depends_on:
       - api
       - front
     networks:
       - backend
       - frontend
-    build: ./proxy
     ports:
-      - 80:8000
+      - 80:80
 networks:
   backend:
   frontend:
