--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,12 @@ services:
     build: ./parkinglot-front
     networks:
       - frontend
-#    ports:
-#      - 8001:8001
   api:
     build: ./parkinglot-api
+    environment:
+      TZ: "Asia/Seoul"
     networks:
       - backend
-#    ports:
-#      - 8080:8080
   proxy:
     build: ./proxy
     depends_on:
